dish update method & tests
